Add eSolia colors to color map and set sections to get different color
Pass variables to nav1 partial in dict. Use "context" instead of dot.
Did not work for top page.

--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -2,7 +2,7 @@
   {{ .Title }} &ndash; {{ .Site.Title }}
 {{ end }}
 {{ define "nav" }}
-    {{- partial "nav1.html" . -}}
+    {{- partial "nav1.html" (dict "context" . "navbgcolor" "is-esolia-yellow-0" "langswcolor" "is-esolia-blue-1") -}}
 {{ end }}
 {{ define "main" }}
 <div class="columns is-fullheight is-gapless">
