--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
   {{ .Title }} &ndash; {{ .Site.Title }}
 {{ end }}
 {{ define "nav" }}
-    {{- partial "nav1.html" . -}}
+    {{- partial "nav1.html" (dict "context" . "navbgcolor" "is-esolia-blue-0" "langswcolor" "is-esolia-yellow-0") -}}
 {{ end }}
 {{ define "main" }}
 <div class="columns content is-fullheight is-gapless">
