--- a/layouts/partials/nav1.html
+++ b/layouts/partials/nav1.html
@@ -1,7 +1,7 @@
 {{ "<!-- ENTERING partial nav1.html -->" | safeHTML }}
-<nav class="navbar is-primary has-shadow is-spaced">
+<nav class="navbar {{ .navbgcolor }} has-shadow is-spaced">
   <div class="navbar-brand">
-    <a class="navbar-item" href="{{ .Site.BaseURL }}">
+    <a class="navbar-item" href="{{ .context.Site.BaseURL }}">
       <img src="/img/eSolia Logo - White Opt 1206.png" alt="eSolia Logo" >
     </a>
     <div class="navbar-burger burger" data-target="navMenu">
@@ -13,13 +13,13 @@
 
   <div class="navbar-menu" id="navMenu">
     <div class="navbar-start">
-      {{ if not .IsHome }}
-      <a class="navbar-item" href="{{ .Site.BaseURL }}">
+      {{ if not .context.IsHome }}
+      <a class="navbar-item" href="{{ .context.Site.BaseURL }}">
         <span class="icon"><i class="fas fa-home has-text-warning"></i></span>
       </a>
       {{ end }}
-      {{- $currentPage := . -}}
-      {{- range .Site.Menus.main }}
+      {{- $currentPage := .context -}}
+      {{- range .context.Site.Menus.main }}
       <div class="navbar-item is-hoverable{{ if .HasChildren }} has-dropdown{{ end }}">
         <a class="navbar-link{{ if $currentPage.HasMenuCurrent "main" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a>
           {{ if .HasChildren -}}
@@ -56,15 +56,15 @@
           <a class="has-margin-r-s has-margin-l-s" data-show="quickview" data-target="quickviewDefault">
             <span class="icon"><i class="fas fa-cog has-text-warning"></i></span>
           </a>
-          {{ if .IsTranslated }}
-          {{ range .Translations }}
-          <a class="button is-small is-danger is-rounded" href="{{ .Permalink }}">{{ .Site.Language.LanguageName }}</a>
+          {{ if .context.IsTranslated }}
+          {{ range .context.Translations }}
+          <a class="button is-small {{ $.langswcolor }} is-rounded" href="{{ .Permalink }}">{{ .Site.Language.LanguageName }}</a>
           {{ end }}
           {{ else }}
           {{ if eq .Site.Language.Lang "en" }}
-          <a class="button is-small is-danger is-rounded" href="/">日本語</a>
+          <a class="button is-small {{ $.langswcolor }} is-rounded" href="/">日本語</a>
           {{ else }}
-          <a class="button is-small is-danger is-rounded" href="/">English</a>
+          <a class="button is-small {{ $.langswcolor }} is-rounded" href="/">English</a>
           {{ end }}
           {{ end }}
         </div>
