Change svg colors to match eSolia color scheme

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -27,12 +27,12 @@
       <svg xmlns="http://www.w3.org/2000/svg"  width="100%" height="198">
                 <defs>
                   <linearGradient id="a" x1="50%" x2="50%" y1="-10.959%" y2="100%">
-                    <stop stop-color="#57BBC1" stop-opacity=".40" offset="0%"/>
-                    <stop stop-color="#015871" offset="100%"/>
+                    <stop stop-color="#5EB500" stop-opacity=".30" offset="0%"/>
+                    <stop stop-color="#74DF00" offset="100%"/>
                   </linearGradient>
                   <linearGradient id="b" x1="50%" x2="50%" y1="-10.959%" y2="100%">
-                    <stop stop-color="#59ab60" stop-opacity="1" offset="0%"/>
-                    <stop stop-color="#233b00" offset="100%"/>
+                    <stop stop-color="#001389" stop-opacity=".5" offset="0%"/>
+                    <stop stop-color="#0120E1" offset="100%"/>
                   </linearGradient>
                   <linearGradient id="c" x1="50%" x2="50%" y1="-10.959%" y2="100%">
                     <stop stop-color="#4a4a4a" stop-opacity="1" offset="0%"/>
@@ -179,7 +179,7 @@
         </div>
       </div>
     </section>
-    <section class="section notification is-warning is-marginless">
+    <section class="section notification is-esolia-yellow-1 is-marginless">
       <nav class="level">
         <div class="level-item has-text-centered">
           <div>
@@ -222,7 +222,7 @@
     </div>
  -->
 
-    <section class="section is-marginless notification is-danger">
+    <section class="section is-marginless notification is-esolia-secondary-1-0">
       <div class="columns is-centered  has-margin-l-xl has-margin-r-xl">
         <div class="column">
           <div class="card">
