--- a/layouts/page/successes.html
+++ b/layouts/page/successes.html
@@ -2,7 +2,7 @@
   {{ .Title }} &ndash; {{ .Site.Title }}
 {{ end }}
 {{ define "nav" }}
-    {{- partial "nav1.html" (dict "context" . "navbgcolor" "is-esolia-secondary-1-0" "langswcolor" "is-esolia-yellow-0") -}}
+    {{- partial "nav1.html" (dict "context" . "navbgcolor" "is-esolia-secondary-1-0" "langswcolor" "is-esolia-blue-0" "naviconcolor" "has-text-esolia-secondary-2-0" "menuiconcolor" "has-text-esolia-secondary-1-1") -}}
 {{ end }}
 {{ define "main" }}
 <div class="columns is-fullheight is-gapless">
@@ -11,8 +11,8 @@
 
        {{- $currentPage := . -}}
        {{ range .Site.Menus.successes }}
-         <a class="is-hoverable{{ if $currentPage.IsMenuCurrent "successes" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}"><p class="menu-label has-text-info">{{ .Name }}</p></a>
-          <ul class="menu-list">
+         <a class="is-hoverable{{ if $currentPage.IsMenuCurrent "successes" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}"><p class="menu-label has-text-esolia-secondary-1-1">{{ .Name }}</p></a>
+          <ul class="menu-list-success">
           {{ if .HasChildren }}
           {{ range .Children }}
             <li><a class="is-hoverable{{ if $currentPage.IsMenuCurrent "successes" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
@@ -21,14 +21,14 @@
           </ul>
        {{ end }}
        {{- $currentPage := . -}}
-         <a class="is-hoverable"><p class="menu-label has-text-info">{{ i18n "other" | safeHTML }}</p></a>
-          <ul class="menu-list">
+         <a class="is-hoverable"><p class="menu-label has-text-esolia-secondary-1-1">{{ i18n "other" | safeHTML }}</p></a>
+          <ul class="menu-list-success">
        　　{{ range .Site.Menus.successesother }}
             <li><a class="is-hoverable{{ if $currentPage.IsMenuCurrent "successesother" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
           {{ end }}
           </ul>
 
-       <p class="menu-label has-text-info">Tags</p>
+       <p class="menu-label has-text-esolia-secondary-1-1">Tags</p>
        <div class="tags has-margin-l">
        {{ range .Params.tags }}
         <span class="tag is-rounded is-light"><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></span>
