--- a/layouts/partials/nav-home.html
+++ b/layouts/partials/nav-home.html
@@ -15,7 +15,7 @@
     <div class="navbar-start">
       {{ if not .IsHome }}
       <a class="navbar-item" href="{{ .Site.BaseURL }}">
-        <span class="icon"><i class="fas fa-home has-text-warning"></i></span>
+        <span class="icon"><i class="fas fa-home has-text-esolia-yellow-0"></i></span>
       </a>
       {{ end }}
       {{- $currentPage := . -}}
@@ -29,7 +29,7 @@
             {{ range $index, $element := $list -}}
               <a class="navbar-item{{ if $currentPage.IsMenuCurrent "main" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">
                 <span>
-                <span class="icon has-text-primary">
+                <span class="icon has-text-esolia-blue-0">
                   <i class="fas {{ .Pre }}"></i>
                 </span>
                 <strong>{{ .Name }}</strong>
@@ -51,20 +51,20 @@
       <div class="navbar-item">
         <div class="field is-grouped">
           <a href="/search">
-            <span class="icon"><i class="fas fa-search has-text-warning"></i></span>
+            <span class="icon"><i class="fas fa-search has-text-esolia-yellow-0"></i></span>
           </a>
           <a class="has-margin-r-s has-margin-l-s" data-show="quickview" data-target="quickviewDefault">
-            <span class="icon"><i class="fas fa-cog has-text-warning"></i></span>
+            <span class="icon"><i class="fas fa-cog has-text-esolia-yellow-0"></i></span>
           </a>
           {{ if .IsTranslated }}
           {{ range .Translations }}
-          <a class="button is-small is-esolia-yellow-0 is-rounded" href="{{ .Permalink }}">{{ .Site.Language.LanguageName }}</a>
+          <a class="button is-small is-esolia-secondary-2-0 is-rounded" href="{{ .Permalink }}">{{ .Site.Language.LanguageName }}</a>
           {{ end }}
           {{ else }}
           {{ if eq .Site.Language.Lang "en" }}
-          <a class="button is-small is-esolia-yellow-0 is-rounded" href="/">日本語</a>
+          <a class="button is-small is-esolia-secondary-2-0 is-rounded" href="/">日本語</a>
           {{ else }}
-          <a class="button is-small is-esolia-yellow-0 is-rounded" href="/">English</a>
+          <a class="button is-small is-esolia-secondary-2-0 is-rounded" href="/">English</a>
           {{ end }}
           {{ end }}
         </div>
