Added year to footer, also in shortcode for convenience

--- a/layouts/partials/footer1.html
+++ b/layouts/partials/footer1.html
@@ -12,7 +12,7 @@
         </p>
         <p>
           <small>
-            Source code licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
+            COPYRIGHT {{ now.Format "2006" }} TestSource code licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
           </small>
         </p>
         <p style="margin-top: 1rem;">
