--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -142,7 +142,7 @@ $colors: map-merge($colors, $addColors);
 html { background-color: $grey-darker;}
 
 // set max width of paragraphs for ease of reading
-p,ul,ol,table {
+p,ul,ol,table,blockquote,span,small {
     max-width: 38em;
     // margin: auto;
 }
