Work on top page and listing info from PROdb

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -31,8 +31,8 @@
                     <stop stop-color="#74DF00" offset="100%"/>
                   </linearGradient>
                   <linearGradient id="b" x1="50%" x2="50%" y1="-10.959%" y2="100%">
-                    <stop stop-color="#001389" stop-opacity=".5" offset="0%"/>
-                    <stop stop-color="#0120E1" offset="100%"/>
+                    <stop stop-color="#004980" stop-opacity=".5" offset="0%"/>
+                    <stop stop-color="#005A9F" offset="100%"/>
                   </linearGradient>
                   <linearGradient id="c" x1="50%" x2="50%" y1="-10.959%" y2="100%">
                     <stop stop-color="#4a4a4a" stop-opacity="1" offset="0%"/>
@@ -52,8 +52,9 @@
     <div class="tile is-ancestor">
         <div class="tile is-parent is-shaded">
           <article class="tile is-child box notification is-info">
-            <p class="title">One</p>
-            <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
+            <p class="title">{{ i18n "topsectionwwd" }}</p>
+            <p class="subtitle">{{ i18n "topsectionwwdsub" }}</p>
+            <p>{{ i18n "topsectionwwdtext" | safeHTML }}</p>
           </article>
         </div>
         <div class="tile is-parent">
@@ -102,8 +103,9 @@
                 </div>
                 <div class="tile is-parent">
                   <article class="tile is-child box">
-                    <p class="title">Seven</p>
-                    <p class="subtitle">Subtitle</p>
+                    <figure class="image">
+                      <img src="/img/eSolia-Logo-Flat-2015.png"></img>
+                    </figure>
                   </article>
                 </div>
               </div>
@@ -329,12 +331,33 @@
           </div>
         </div>
       </div>
+      <div class="columns has-margin-l-xl has-margin-r-xl">
+        <div class="column">
+          <script src="https://pro.dbflex.net/secure/embed.js"
+  data-url="/ev-3440630/db/15331/view.aspx"></script>
+        </div>
+        <div class="column">
+  　　　　　<script src="https://pro.dbflex.net/secure/embed.js"
+  data-url="/ev-3440631/db/15331/view.aspx"></script>
+　　　　 </div>
+      </div>
     </section>
     <section class="section notification is-light is-marginless is-radiusless">
       <div class="container">
         <div class="columns">
           <div class="column is-8-desktop is-offset-2-desktop">
             <div class="content">
+
+            <div id="hideheader" class="has-text-esolia-blue-0">
+                      <script src="https://pro.dbflex.net/secure/embed.js"
+              data-url="/ev-3440630/db/15331/view.aspx"></script>
+            </div>
+            <div id="hideheader" class="has-text-esolia-blue-0">
+              　　　　　<script src="https://pro.dbflex.net/secure/embed.js"
+              data-url="/ev-3440631/db/15331/view.aspx"></script>
+            </div>
+
+
               <h3>What's included</h3>
               <p>
                 The <code>npm</code> dependencies included in <code>package.json</code> are:
