Style PROdb links

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -58,7 +58,7 @@
           </article>
         </div>
         <div class="tile is-parent">
-          <article class="tile is-child box">
+          <article class="tile is-child box notification is-link">
             <p class="title">Two</p>
             <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
           </article>
@@ -348,11 +348,11 @@
           <div class="column is-8-desktop is-offset-2-desktop">
             <div class="content">
 
-            <div id="hideheader" class="has-text-esolia-blue-0">
+            <div id="hideheader" class="">
                       <script src="https://pro.dbflex.net/secure/embed.js"
               data-url="/ev-3440630/db/15331/view.aspx"></script>
             </div>
-            <div id="hideheader" class="has-text-esolia-blue-0">
+            <div id="hideheader" class="">
               　　　　　<script src="https://pro.dbflex.net/secure/embed.js"
               data-url="/ev-3440631/db/15331/view.aspx"></script>
             </div>
